# E2E-Self-Heal

./: AGENTS.md  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  action.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: assign-reviewer.yml  ci.yml
app/: cli.py  graph.py  llm.py  schemas.py  state.py
app/nodes/: reviewer.py  shadow_verifier.py
app/preprocess/: aria_snapshot.py  diff_ast_analyzer.py  error_log_parser.py  failure_scanner.py
app/prompts/: reviewer.py
app/shadow/: __init__.py  in_memory_snapshot_store.py  injector.py  interfaces.py  matcher.py  runtime.py  schemas.py  snapshot_store.py  workspace.py
ci/: github-review-bot.example.yml
docs/: RELEASING.md  design.md  sandbox.md  shadow-quickstart.md  shadow-testing.md
tests/: test_aria_snapshot.py  test_cli.py  test_diff_ast_analyzer.py  test_error_log_parser.py  test_in_memory_snapshot_store.py  test_mock_injector.py  test_reviewer.py  test_scoring.py  test_shadow_runtime.py  test_shadow_verifier.py  test_shadow_workspace.py  test_snapshot_store.py
