[project]
name = "ai-driven-e2e"
version = "0.2.0"
description = "LangGraph-based AI-driven E2E test self-healing engine (CLI core + CI integration)"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lee-Dongwook", email = "dlehddnr0713@gmail.com" }]
keywords = ["playwright", "e2e", "self-healing", "langgraph", "testing", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langgraph>=0.2",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=8.3",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Lee-Dongwook/E2E-Self-Heal"
Repository = "https://github.com/Lee-Dongwook/E2E-Self-Heal"
Issues = "https://github.com/Lee-Dongwook/E2E-Self-Heal/issues"

[project.scripts]
e2e-healer = "app.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# Collect only the test suite; app/nodes/test_runner.py defines a node fn named
# `test_runner` that pytest would otherwise mis-collect as a test.
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
